--- a/Lib.Data.External/packages.config
+++ b/Lib.Data.External/packages.config
@@ -24,6 +24,7 @@
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="MimeSharp" version="1.0.0" targetFramework="net472" />
+  <package id="Neo4j.Driver" version="1.7.2" targetFramework="net472" />
   <package id="NEST" version="6.4.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Newtonsoft.Json.Schema" version="3.0.11" targetFramework="net472" />
