--- a/Util/packages.config
+++ b/Util/packages.config
@@ -11,6 +11,8 @@
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="OpenTracing" version="0.12.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
   <package id="ZeroFormatter" version="1.6.4" targetFramework="net472" />
   <package id="ZeroFormatter.Interfaces" version="1.6.4" targetFramework="net472" />
 </packages>
