More changes: db inserts repaired in dbupgrader simplified update/create for event extended js for frontend modal editor partially cleaned apiV1

--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -448,6 +448,7 @@
     <Compile Include="Data\EventSubType.cs">
       <DependentUpon>Db.tt</DependentUpon>
     </Compile>
+    <Compile Include="Data\EventSubType.partial.cs" />
     <Compile Include="Data\EventType.cs">
       <DependentUpon>Db.tt</DependentUpon>
     </Compile>
