--- a/Plugin.Enhancers/Plugin.Enhancers.csproj
+++ b/Plugin.Enhancers/Plugin.Enhancers.csproj
@@ -44,6 +44,9 @@
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.AppContext, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.AppContext.4.3.0\lib\net463\System.AppContext.dll</HintPath>
@@ -177,6 +180,7 @@
   <ItemGroup>
     <Compile Include="Base.cs" />
     <Compile Include="AddMissingData.cs" />
+    <Compile Include="ManualChanges.cs" />
     <Compile Include="FormalDataNormalizer.cs" />
     <Compile Include="CalculatedPrice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
