Elastic APM test

--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -30,6 +30,11 @@
     <add key="ZabbixIgnoreDataIntervals"
   value="~2019-08-11T20:10:00~2019-08-11T23:53:00~Zabbix reinstall | ~2019-08-11T23:58:00~2019-08-12T10:59:00~enabled IP6 "/>
 
+
+    <add key="ElasticApm:ServerUrls" value="http://10.10.100.170:8200" />
+    <add key="ElasticApm:ServiceName" value="Web.App"/>
+    <add key="ElasticApm:Environment" value="testing"/>
+    
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -110,6 +115,8 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="*" type="IsapiModule" preCondition="integratedMode,runtimeVersionv4.0" />-->
     </handlers>
     <modules>
+      <add name="ElasticApmModule" type="Elastic.Apm.AspNetFullFramework.ElasticApmModule" preCondition="managedHandler" />
+
       <remove name="WebDAVModule" />
       <remove name="FormsAuthentication" />
       <add name="PageTimer" type="Devmasters.Net.Web.HttpModules.PageTimer" preCondition="" />
