--- a/Lib/app.config
+++ b/Lib/app.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -40,7 +40,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-4.3.3" newVersion="4.3.3" />
+        <bindingRedirect oldVersion="0.0.0.0-4.3.3" newVersion="4.3.3" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Reflection.TypeExtensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
@@ -115,7 +115,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DbEntities" connectionString="metadata=res://*/Data.Db.csdl|res://*/Data.Db.ssdl|res://*/Data.Db.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Firmy;persist security info=True;user id=firmy;password=hlidacipes;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DbEntities" connectionString="metadata=res://*/Data.Db.csdl|res://*/Data.Db.ssdl|res://*/Data.Db.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-S6KKSE8;initial catalog=Firmy;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.serviceModel>
     <bindings>
@@ -130,4 +130,7 @@
       <endpoint address="https://adisrws.mfcr.cz/adistc/axis2/services/rozhraniCRPDPH.rozhraniCRPDPHSOAP" binding="basicHttpBinding" bindingConfiguration="rozhraniCRPDPHSOAP" contract="HlidacStatu.Lib.Data.External.NespolehlivyPlatceDPH.rozhraniCRPDPH" name="rozhraniCRPDPHSOAP" />
     </client>
   </system.serviceModel>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" /></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+  </startup>
+</configuration>
