--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -93,7 +93,7 @@
 
   </system.web>
   <system.webServer>
-    <serverRuntime uploadReadAheadSize="62914560" maxRequestEntityAllowed="62914560" />
+    <!--<serverRuntime uploadReadAheadSize="62914560" maxRequestEntityAllowed="62914560" />-->
     <security>
       <requestFiltering>
         <requestLimits maxUrl="82000" maxQueryString="80000" maxAllowedContentLength="62914560" />
