--- a/Web.Statu/WebApp.Release.config.example
+++ b/Web.Statu/WebApp.Release.config.example
@@ -40,6 +40,7 @@
 
     <!-- path for cache files -->
     <add xdt:Transform="Insert" key="FileCachePath" value="c:\Data\HlidacSmluv\FileCache" />
+    <add xdt:Transform="Insert" key="DumpsPath" value="\_dumps" />
 
     <!-- path App_Data directory in the root of web app -->
     <add xdt:Transform="Insert" key="WebAppDataPath" value="c:\Projects\HlidacStatu\trunk\Web.Statu\App_Data" />
