--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -451,6 +451,7 @@
     <Compile Include="Data\Dotace\Dotace.cs" />
     <Compile Include="Data\Dotace\DotaceService.cs" />
     <Compile Include="Data\Dotace\DotaceService.Search.cs" />
+    <Compile Include="Data\Dotace\Rozhodnuti.cs" />
     <Compile Include="Data\EventType.cs">
       <DependentUpon>Db.tt</DependentUpon>
     </Compile>
