--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1358,6 +1358,7 @@
     <Content Include="Views\Dotace\_SearchFormHelpContent.cshtml" />
     <Content Include="Views\Dotace\Hledat.cshtml" />
     <Content Include="Views\Dotace\_SearchResult.cshtml" />
+    <Content Include="Views\Dotace\Detail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
