non CZ companies - refactoring, fixes

--- a/Plugin.IssueAnalyzers/Plugin.IssueAnalyzers.csproj
+++ b/Plugin.IssueAnalyzers/Plugin.IssueAnalyzers.csproj
@@ -147,6 +147,10 @@
       <Project>{40133098-338c-4a5b-bfaa-69a748d73a87}</Project>
       <Name>Lib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Util\Util.csproj">
+      <Project>{1e06f060-4ba2-45b7-8340-c166c9b2b830}</Project>
+      <Name>Util</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
