--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -47,7 +47,7 @@
 
   <system.net>
     <mailSettings>
-      <smtp from="HlidacSmluv &lt;info@HlidacStatu.cz&gt;" deliveryMethod="SpecifiedPickupDirectory">
+      <smtp from="HlidacSmluv &lt;podpora@HlidacStatu.cz&gt;" deliveryMethod="SpecifiedPickupDirectory">
         <specifiedPickupDirectory pickupDirectoryLocation="c:\inetpub\mailroot\Pickup" />
       </smtp>
 
