--- a/Lib.OCR.Api.Client/Lib.OCR.Api.Client.csproj
+++ b/Lib.OCR.Api.Client/Lib.OCR.Api.Client.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7B8622C4-0878-4E70-AE38-45797F2BC45F}</ProjectGuid>
+    <ProjectGuid>{7609680C-3C9D-4735-8709-E64F7116AB70}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HlidacStatu.Lib.OCR.Api.Client</RootNamespace>
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
