--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -365,6 +365,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ApiV1Controller.Modal.cs" />
     <Compile Include="Controllers\DataController.CreateWizards.cs" />
     <Compile Include="Controllers\DotaceController.cs" />
     <Compile Include="Controllers\GenericAuthController.cs" />
@@ -1367,6 +1368,7 @@
     <Content Include="Views\Home\Subjekt_Zahranicni.cshtml" />
     <Content Include="Views\ApiV1\OCRStat.cshtml" />
     <Content Include="Views\Home\Tmp_child.cshtml" />
+    <Content Include="Views\ApiV1\ModalClassification.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
