--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -365,6 +365,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ApiV1Controller.NasiPolitici.cs" />
     <Compile Include="Controllers\ApiV1Controller.Modal.cs" />
     <Compile Include="Controllers\DataController.CreateWizards.cs" />
     <Compile Include="Controllers\DotaceController.cs" />
