--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1372,6 +1372,7 @@
     <Content Include="Views\ApiV1\ModalClassification.cshtml" />
     <Content Include="Views\Data\CreateFromBackup.cshtml" />
     <Content Include="Views\Data\CreateFromBackup1.cshtml" />
+    <Content Include="Views\Data\Promo\front_vyjadreni-politiku.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
