back to the old query parser

--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -78,6 +78,7 @@
                  maxRequestLength="30000" 
                  executionTimeout="300"
                  requestValidationMode="2.0"
+                 relaxedUrlToFileSystemMapping="true"                 
                  />
     <globalization uiCulture="cs" culture="cs-CZ"/>
     <customErrors mode="Off" >
