new query parser alpha

--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -637,8 +637,21 @@
     <Compile Include="Search\InsolvenceSearchResult.cs" />
     <Compile Include="ES\Manager.cs" />
     <Compile Include="Search\Rule.cs" />
+    <Compile Include="Search\Rules\FullQueryReplace.cs" />
+    <Compile Include="Search\Rules\VZ_CPV.cs" />
+    <Compile Include="Search\Rules\SimpleValueReplace.cs" />
+    <Compile Include="Search\Rules\Smlouva_Chyby.cs" />
+    <Compile Include="Search\Rules\VZ_Form.cs" />
+    <Compile Include="Search\Rules\VZ_Oblast.cs" />
+    <Compile Include="Search\Rules\OsobaId.cs" />
+    <Compile Include="Search\Rules\IRule.cs" />
+    <Compile Include="Search\Query.cs" />
+    <Compile Include="Search\Rules\Holding.cs" />
+    <Compile Include="Search\Rules\RuleResult.cs" />
+    <Compile Include="Search\Rules\Rule.cs" />
     <Compile Include="Search\SearchDataResult.cs" />
-    <Compile Include="Search\SplittedQuery.cs" />
+    <Compile Include="Search\SimpleQueryCreator.cs" />
+    <Compile Include="Search\SplittingQuery.cs" />
     <Compile Include="Search\Tools.cs" />
     <Compile Include="Search\VerejnaZakazkaSearchResult.cs" />
     <Compile Include="Search\SmlouvaSearchResult.cs" />
