--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1057,6 +1057,12 @@
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\searchhelper\searchhelper.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\searchhelper\searchhelper.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\typeahead\jquery.typeahead.min.css" />
     <Content Include="Scripts\typeahead\jquery.typeahead.min.js" />
     <Content Include="Scripts\visavail.js" />
