--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -648,7 +648,7 @@
     <Compile Include="Search\Query.cs" />
     <Compile Include="Search\Rules\Holding.cs" />
     <Compile Include="Search\Rules\RuleResult.cs" />
-    <Compile Include="Search\Rules\Rule.cs" />
+    <Compile Include="Search\Rules\RuleBase.cs" />
     <Compile Include="Search\SearchDataResult.cs" />
     <Compile Include="Search\SimpleQueryCreator.cs" />
     <Compile Include="Search\SplittingQuery.cs" />
